--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
   },
   "homepage": "https://github.com/CleverseAcademy/front-end-typescript-demo#readme",
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^6.7.3",
+    "@typescript-eslint/parser": "^6.7.3",
+    "eslint": "^8.50.0",
     "typescript": "^5.2.2"
   },
   "dependencies": {
